The template should indicate it is for the Meetup group. Ignoring presentation html files that are generated in presos folder.

--- a/ncjs/template.html
+++ b/ncjs/template.html
@@ -31,6 +31,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<section>
+					<h1>
+						NorcalJS Meetup
+					</h1>
+				</section>
 				<section>Slide 1</section>
 				<section>Slide 2</section>
 			</div>
