Added form example.

--- a/ncjs/presos/reveal_inception.html
+++ b/ncjs/presos/reveal_inception.html
@@ -242,7 +242,8 @@ npm start</code></pre>
 						<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Retweet if <a href="https://twitter.com/hashtag/music?src=hash">#music</a> is your first language ❤️ 🎼 <a href="https://t.co/irIjRW56lR">https://t.co/irIjRW56lR</a> <a href="https://twitter.com/hashtag/Ukulele?src=hash">#Ukulele</a> <a href="https://t.co/QE9Fq9YSj1">pic.twitter.com/QE9Fq9YSj1</a></p>&mdash; Meetup (@Meetup) <a href="https://twitter.com/Meetup/status/776088909969231872">September 14, 2016</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</section>
-					<section data-background="http://i.giphy.com/rtW8602fw5368.gif">
+					<section>
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScnBA1nE98ilRcXZhwTgdyUXyW-zh6btxthpePucSlo0fIYaA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 					</section>
 				</section>
 
