--- a/ncjs/presos/reveal_inception.html
+++ b/ncjs/presos/reveal_inception.html
@@ -68,12 +68,14 @@
 					<h2>About Reveal</h2>
 				  <ul>
 				    <li>Characteristics
-				      <ul>
+				      <ul style="font-size:.8em">
 				        <li>Open sourced</li>
 				        <li>Configurable</li>
 				        <li>Extendable</li>
+				        <li>Searchable</li>
 				        <li>Backed by JS standards</li>
 								<li>Low footprint (code remnants)</li>
+								<li>Conducive to version control</li>
 				        <li>Loose integration with other libraries means it can be resilient by itself</li>
 				      </ul>
 				    </li>
@@ -242,7 +244,10 @@ npm start</code></pre>
 						<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Retweet if <a href="https://twitter.com/hashtag/music?src=hash">#music</a> is your first language ❤️ 🎼 <a href="https://t.co/irIjRW56lR">https://t.co/irIjRW56lR</a> <a href="https://twitter.com/hashtag/Ukulele?src=hash">#Ukulele</a> <a href="https://t.co/QE9Fq9YSj1">pic.twitter.com/QE9Fq9YSj1</a></p>&mdash; Meetup (@Meetup) <a href="https://twitter.com/Meetup/status/776088909969231872">September 14, 2016</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</section>
-					<section data-background="http://i.giphy.com/rtW8602fw5368.gif">
+					<section>
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScnBA1nE98ilRcXZhwTgdyUXyW-zh6btxthpePucSlo0fIYaA/viewform?embedded=true" width="760" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+						<br />
+						<a href="https://docs.google.com/spreadsheets/d/1PeDAzKomf_Uw9wYxN6t-Ra5TWloh6a1KUtjDp2PuEz8/edit?usp=sharing">results</a>
 					</section>
 				</section>
 
