Updated preso content.

--- a/ncjs/presos/reveal_inception.html
+++ b/ncjs/presos/reveal_inception.html
@@ -133,6 +133,7 @@
 				<section>
 				  <h3 id="plus-">plus...</h3>
 				  <ul>
+						<li>linting</li>
 				    <li>task runners</li>
 				    <li>end-to-end testing</li>
 				    <li>browser extension</li>
